--- a/drivers/bse-alsa/NEWS
+++ b/drivers/bse-alsa/NEWS
@@ -1,3 +1,7 @@
+Overview of Changes in BEAST/BSE 0.6.6:
+
+* Build fixes for BEAST-0.6.6
+
 Overview of Changes in BSE-ALSA 0.6.4:
 
 * Build fixes.
