--- a/drivers/bse-portaudio/NEWS
+++ b/drivers/bse-portaudio/NEWS
@@ -1,3 +1,9 @@
+Overview of Changes in BEAST/BSE 0.6.6:
+
+* Build fixes for BEAST-0.6.6
+* Plugged memory leaks
+* Fixed error handling
+
 Initial Release of BSE-PortAudio 0.6.4:
 
 * Provide a PortAudioV19 PCM driver for BSE
