--- a/drivers/bse-alsa/ChangeLog
+++ b/drivers/bse-alsa/ChangeLog
@@ -1,3 +1,7 @@
+Wed May 25 23:30:03 2005  Tim Janik  <timj@gtk.org>
+
+	* release bse-alsa 0.6.6.
+	
 Sat May 14 20:47:52 2005  Tim Janik  <timj@gtk.org>
 
 	* bsepcmdevice-alsa.c:
