translation updates from Petrecca Michele <petrecca@interfree.it>.
Sun Jul  3 13:14:12 2005  Tim Janik  <timj@gtk.org>

        * it.po: translation updates from
        Petrecca Michele <petrecca@interfree.it>.

svn path=/trunk/; revision=3343

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jul  3 13:14:12 2005  Tim Janik  <timj@gtk.org>
+
+	* it.po: translation updates from 
+	Petrecca Michele <petrecca@interfree.it>.
+
 2005-06-23  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
