--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-04  Hendrik Richter  <hendi@gnome-de.org>
+
+	* de.po: Fixed German translation by
+	Jens Seidel <jensseidel@users.sf.net>.
+
 Sun Jul  3 13:14:12 2005  Tim Janik  <timj@gtk.org>
 
 	* it.po: translation updates from 
