--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-08  Josep Puigdemont  <josep.puigdemont@gmail.com>
+
+        * ca.po: Updated Catalan translation by
+        Gil Forcada <gilforcada@guifi.net>
+
 2005-07-04  Hendrik Richter  <hendi@gnome-de.org>
 
 	* de.po: Fixed German translation by
