--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-16  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* configure.in: Added ne in ALL_LINGUAS
+
 Wed May 25 23:28:22 2005  Tim Janik  <timj@gtk.org>
 
 	* released beast 0.6.6.
