--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-16  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* ne.po: Added Nepali Translation
+
 2005-07-13  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
