--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-26  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation by
+	Gil Forcada <gilforcada@guifi.net>.
+
 2005-07-16  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* ne.po: Added Nepali Translation
