--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,21 @@
+Sat Jul 23 17:04:06 2005  Tim Janik  <timj@gtk.org>
+
+	* bseutils.c: 
+	bse_icon_from_pixdata(): fixed overrun checks.
+
+Wed Jun 22 23:12:00 2005  Tim Janik  <timj@gtk.org>
+
+	* bseamplifier.cc: changed exponential volume curve from qcircle2 (which
+	aparently was false, compared to other exponential volume amplifiers) to
+	bse_approx_qcircle4().
+
+	* bse/bsewave.h, bse/bsewave.c: allow velocity dependent wave index 
+	lookups, seperate osc_freq and velocity values used for lookups from
+	GslWaveChunk. adapted related code portions.
+
+	* gslwaveosc.c: wave chunk lookups currently are done with a hardcoded
+	velocity of 1.
+
 Wed May 25 21:48:22 2005  Tim Janik  <timj@gtk.org>
 
 	* bsecore.idl: added stamp_ticks to record SongTiming.
