--- a/docs/site-links-related.texi
+++ b/docs/site-links-related.texi
@@ -16,6 +16,7 @@
 @item @uref{http://www.glame.de,, GLAME - GNU/Linux Audio Mechanics}
 @item @uref{http://www.xiph.org/ogg/vorbis/,, Ogg/Vorbis - Open Audio Codec}
 @item @uref{http://www.mars.org/home/rob/proj/mpeg/,, MAD - MPEG Audio Decoder}
+@item @uref{http://www.rapicorn.org/,, Rapicorn}
 @item @uref{http://sfk.evilplan.org/csl,, CSL - Common Sound Layer}
 @item @uref{http://www.dreampoint.co.uk,, Freeverb - Public Domain Reverb}
 @item @uref{http://www.lilypond.org,, LilyPond - Music Notation For Everyone}
